Call settings on templates

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -82,7 +82,7 @@
                                         </a>
                                     </div>
                                     <div class="text-14 lh-15 mt-5">
-                                        KK 35 Avenue, Kigali, Rwanda
+                                        {{ settings.address }}
                                     </div>
                                     <div class="row x-gap-10 y-gap-10 items-center pt-10">
                                         <div class="col-auto">
