--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -47,7 +47,7 @@
                     </h1>
                     <div class="d-flex x-gap-5 items-center pt-5">
                         <i class="icon-location-2 text-16 text-light-1"></i>
-                        <div class="text-15 text-light-1">KK 35 Avenue, Kigali, Rwanda</div>
+                        <div class="text-15 text-light-1">{{ settings.address }}</div>
                     </div>
                 </div>
             </div>
