--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -24,10 +24,10 @@
                 <div class="col-xl-12">
                     <div class="row y-gap-10 items-center justify-between">
                         <div class="col-auto">
-                            {% comment %} <div class="text-18"><span class="fw-500">20 rooms</span> in Kigali</div> {% endcomment %}
+                            <div class="text-18"><span class="fw-500">{{ rooms_count }} rooms</span></div>
                         </div>
 
-                        <div class="col-auto">
+                        {% comment %} <div class="col-auto">
                             <div class="row x-gap-20 y-gap-20">
                                 <div class="col-auto">
                                     <button class="button -blue-1 h-40 px-20 rounded-100 bg-blue-1-05 text-15 text-blue-1">
@@ -43,7 +43,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                     <div class="mt-30"></div>
                     <div class="row y-gap-30">
