--- a/templates/booking.html
+++ b/templates/booking.html
@@ -188,7 +188,7 @@
             FlutterwaveCheckout({
                 public_key: "FLWPUBK_TEST-2c56ccd77ee3634eaff746b2e451cf2b-X",
                 tx_ref: "titanic-{{ booking.id }}",
-                amount: {{ room.price }},
+                amount: 50,
                 currency: "USD",
                 payment_options: "card, mobilemoneyghana, banktransfer, ussd",
                 redirect_url: "https://bnbmv.up.railway.app/success/{{ booking.id }}",
