--- a/templates/booking.html
+++ b/templates/booking.html
@@ -200,7 +200,7 @@
             FlutterwaveCheckout({
                 public_key: "FLWPUBK_TEST-7ad8b91138affefefb6cb467e6bf89ea-X",
                 tx_ref: "bnb-mountain-view-{{ booking.id }}",
-                amount: {{ booking.price }},
+                amount: 1,
                 currency: selectedCurrency,
                 payment_options: "card, banktransfer, ussd, mobilemoneyghana, mobilemoneyrwanda, mobilemoneyuganda, mpesa",
                 redirect_url: "https://bnbmv.up.railway.app/success/{{ booking.id }}",
