--- a/templates/booking.html
+++ b/templates/booking.html
@@ -41,7 +41,7 @@
                                 <div class="col-auto">
                                     <div class="text-15">Before you stay you'll pay</div>
                                 </div>
-                                <form>
+                                {% comment %} <form>
                                     <select id="currency" onchange="updateCurrency()">
                                         <option value="USD">USD</option>
                                         <option value="KES">KES (Kenya)</option>
@@ -55,13 +55,13 @@
                                             </button>
                                         </div>
                                     </div>
-                                </form>
-                                {% comment %} <form method="POST" action="https://checkout.flutterwave.com/v3/hosted/pay">
+                                </form> {% endcomment %}
+                                <form method="POST" action="https://checkout.flutterwave.com/v3/hosted/pay">
                                     {% csrf_token %}
                                     <div class="col-auto">
-                                        <div class="text-15">${{ room.price|intcomma }}</div>
+                                        <div class="text-15"></div>
                                     </div>
-                                    <input type="hidden" name="public_key" value="FLWPUBK_TEST-02b9b5fc6406bd4a41c3ff141cc45e93-X" />
+                                    <input type="hidden" name="public_key" value="FLWPUBK_TEST-7ad8b91138affefefb6cb467e6bf89ea-X" />
                                     <input type="hidden" name="customer[email]" value="{{ booking.email }}" />
                                     <input type="hidden" name="customer[name]" value="{{ booking.name }}" />
                                     <input type="hidden" name="tx_ref" value="txref-{{ booking.id }}" />
@@ -73,11 +73,11 @@
                                     <div class="row y-gap-20 items-center justify-between">
                                         <div class="col-auto">
                                             <button class="button h-60 px-24 -dark-1 bg-blue-1 text-white" type="submit" id="start-payment-button">
-                                                Pay with Flutterwave <div class="icon-arrow-top-right ml-15"></div>
+                                                Pay ${{ room.price|intcomma }} with Flutterwave <div class="icon-arrow-top-right ml-15"></div>
                                             </button>
                                         </div>
                                     </div>
-                                </form> {% endcomment %}
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -154,14 +154,14 @@
                                     <div class="text-15">{{ room.price }}</div>
                                 </div>
                             </div>
-                            <div class="row y-gap-5 justify-between pt-5">
+                            {% comment %} <div class="row y-gap-5 justify-between pt-5">
                                 <div class="col-auto">
                                     <div class="text-15">Taxes and fees</div>
                                 </div>
                                 <div class="col-auto">
                                     <div class="text-15">$10.47</div>
                                 </div>
-                            </div>
+                            </div> {% endcomment %}
                             <div class="row y-gap-5 justify-between pt-5">
                                 <div class="col-auto">
                                     <div class="text-15">Booking fees</div>
@@ -189,7 +189,7 @@
 
     <script src="https://checkout.flutterwave.com/v3.js"></script>
 
-    <script>
+    {% comment %} <script>
         let selectedCurrency = "USD";
     
         function updateCurrency() {
@@ -200,7 +200,7 @@
             FlutterwaveCheckout({
                 public_key: "FLWPUBK_TEST-7ad8b91138affefefb6cb467e6bf89ea-X",
                 tx_ref: "bnb-mountain-view-{{ booking.id }}",
-                amount: 1,
+                amount: "{{ room.price }}",
                 currency: selectedCurrency,
                 payment_options: "card, banktransfer, ussd, mobilemoneyghana, mobilemoneyrwanda, mobilemoneyuganda, mpesa",
                 redirect_url: "https://bnbmv.up.railway.app/success/{{ booking.id }}",
@@ -220,6 +220,6 @@
                 }
             });
         }
-    </script>
+    </script> {% endcomment %}
 
 {% endblock %}
