--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -9,7 +9,7 @@
                         {% comment %} <img src="{% static 'img/logo/logo.png' %}" alt="logo icon">
                         <img src="{% static 'img/logo/logo.png' %}" alt="logo icon"> {% endcomment %}
                         <h3 style="color: white;">
-                            B&B Mountain View
+                            B&B MOUNTAIN VIEW
                         </h3>
                     </a>
                 </div>
