--- a/templates/inc/hero.html
+++ b/templates/inc/hero.html
@@ -7,10 +7,10 @@
         <div class="row justify-center">
             <div class="col-xl-9">
                 <div class="text-center">
-                    <h1 data-anim-child="slide-up delay-4" class="text-60 lg:text-40 md:text-30 text-white">Welcome to B&B Mountain Viewe</h1>
+                    <h1 data-anim-child="slide-up delay-4" class="text-48 lg:text-40 md:text-30 text-white">Welcome to B&B MOUNTAIN VIEW</h1>
                     <p data-anim-child="slide-up delay-5" class="text-white mt-5">Discover amzaing places at exclusive deals</p>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</section>  
