--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,14 +104,14 @@
   --color-white: #FFFFFF;
   --color-black: #000000;
   --color-border: #DDDDDD;
-  --color-dark-1: #051036;
-  --color-dark-2: #0D2857;
+  --color-dark-1: #701a20;
+  --color-dark-2: #701a20;
   --color-dark-3: #13357B;
   --color-dark-4: #163C8C;
   --color-light-1: #697488;
   --color-light-2: #F5F5F5;
   --color-light-3: #FBFCFF;
-  --color-blue-1: #3554D1;
+  --color-blue-1: #1fb5b4;
   --color-blue-2: #E5F0FD;
   --color-green-1: #EBFCEA;
   --color-green-2: #008009;
@@ -1910,7 +1910,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(270deg, rgba(5, 16, 54, 0.5) 0%, #051036 72.43%);
+  background: linear-gradient(270deg, rgba(5, 16, 54, 0.5) 0%, #701a20 72.43%);
   opacity: 0.85;
 }
 
@@ -3453,7 +3453,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header.-type-5.-header-5-sticky {
   background-color: white !important;
-  box-shadow: 0px 10px 30px 0px #05103608;
+  box-shadow: 0px 10px 30px 0px #701a2008;
 }
 
 .header.-type-5.-header-5-sticky .header__buttons > *:nth-child(1) {
@@ -3558,7 +3558,7 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--color-dark-1) !important;
     min-width: 240px;
     padding: 20px;
-    box-shadow: 0px 10px 60px 0px #0510360D;
+    box-shadow: 0px 10px 60px 0px #701a200D;
     opacity: 0;
     pointer-events: none;
     transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -3589,7 +3589,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 4px;
     color: var(--color-dark-1);
     width: 800px;
-    box-shadow: 0px 10px 30px 0px #05103608;
+    box-shadow: 0px 10px 30px 0px #701a2008;
     transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
     opacity: 0;
     pointer-events: none;
@@ -4043,7 +4043,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 900px;
   max-width: 100vw;
   margin-top: 30px;
-  box-shadow: 0px 10px 60px 0px #0510360D;
+  box-shadow: 0px 10px 60px 0px #701a200D;
   transform: translateX(-31%);
   transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
   pointer-events: none;
@@ -4083,7 +4083,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 400px;
   max-width: 100vw;
   margin-top: 30px;
-  box-shadow: 0px 10px 60px 0px #0510360D;
+  box-shadow: 0px 10px 60px 0px #701a200D;
   transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
   pointer-events: none;
   opacity: 0;
@@ -4114,7 +4114,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .featureIcon.-type-1.-hover-shadow:hover {
-  box-shadow: 0px 20px 40px 0px #05103612;
+  box-shadow: 0px 20px 40px 0px #701a2012;
 }
 
 .testimonials-slider-2 .swiper-slide {
@@ -4977,7 +4977,7 @@ div[data-slider] > input[type=range]::-ms-tooltip {
   top: 0;
   bottom: 0;
   left: 0;
-  box-shadow: 0px 10px 35px 0px #0510361A;
+  box-shadow: 0px 10px 35px 0px #701a201A;
   transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -9393,7 +9393,7 @@ div[data-slider] > input[type=range]::-ms-tooltip {
 }
 
 .bg-dark-3 {
-  background-color: #051036 !important;
+  background-color: #701a20 !important;
 }
 
 .bg-dark-4 {
@@ -10015,19 +10015,19 @@ div[data-slider] > input[type=range]::-ms-tooltip {
 }
 
 .shadow-1 {
-  box-shadow: 0px 20px 40px 0px #05103612;
+  box-shadow: 0px 20px 40px 0px #701a2012;
 }
 
 .shadow-2 {
-  box-shadow: 0px 10px 35px 0px #0510361A;
+  box-shadow: 0px 10px 35px 0px #701a201A;
 }
 
 .shadow-3 {
-  box-shadow: 0px 10px 30px 0px #05103608;
+  box-shadow: 0px 10px 30px 0px #701a2008;
 }
 
 .shadow-4 {
-  box-shadow: 0px 10px 60px 0px #0510360D;
+  box-shadow: 0px 10px 60px 0px #701a200D;
 }
 
 .flex-center {
@@ -10954,7 +10954,7 @@ div[data-slider] > input[type=range]::-ms-tooltip {
 
 .form-input textarea:focus,
 .form-input input:focus {
-  border: 2px solid #051036 !important;
+  border: 2px solid #701a20 !important;
 }
 
 .form-input textarea:focus ~ label, .form-input textarea:valid ~ label,
@@ -11647,7 +11647,7 @@ table.table-5 td {
 }
 
 .carsSlider .carsSlider-slides__item.-is-active {
-  border: 1px solid #051036;
+  border: 1px solid #701a20;
 }
 
 .carsSlider .carsSlider-slider {
@@ -11672,7 +11672,7 @@ table.table-5 td {
 }
 
 .cruiseSlider .cruiseSlider-slides__item.-is-active {
-  border: 1px solid #051036;
+  border: 1px solid #701a20;
 }
 
 .cruiseSlider .cruiseSlider-slider {
