--- a/templates/inc/hero.html
+++ b/templates/inc/hero.html
@@ -1,6 +1,8 @@
+{% load static %}
+
 <section data-anim-wrap class="masthead -type-6">
     <div data-anim-child="fade" class="masthead__bg bg-dark-3">
-        <img src="https://www.andbeyond.com/wp-content/uploads/sites/5/Radisson-Blue-Kigali.jpg" alt="image">
+        <img src="{% static 'img/hero.jpg' %}" alt="image">
     </div>
 
     <div class="container">
