Return reviews for featuredRooms in template

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,8 +110,8 @@
                                         <div class="d-flex items-center">
                                             <div class="icon-star text-yellow-1 text-10 mr-5"></div>
                                             <div class="text-14 text-light-1">
-                                                <span class="text-15 text-dark-1 fw-500">4.82</span>
-                                                94 reviews
+                                                <span class="text-15 text-dark-1 fw-500">{{ room.overall_rating }}</span>
+                                                {{ room.total_reviews }} reviews
                                             </div>
                                         </div>
                                     </div>
