--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -1,27 +1,63 @@
 {% load static %}
 
-<header data-add-bg="" class="header bg-dark-3 js-header" data-x="header" data-x-toggle="is-menu-opened">
-    <div data-anim="fade" class="header__container container">
-        <div class="row justify-between items-center">
-            <div class="col-auto">
-                <div class="d-flex items-center">
-                    <a href="{% url 'base:home' %}" class="header-logo mr-20" data-x="header-logo" data-x-toggle="is-logo-dark">
-                        {% comment %} <img src="{% static 'img/logo/logo.png' %}" alt="logo icon">
-                        <img src="{% static 'img/logo/logo.png' %}" alt="logo icon"> {% endcomment %}
-                        <h3 style="color: white;">
+<section class="header-banner py-5 bg-blue-1 z-2">
+	<div class="container">
+		<div class="row items-center justify-between">
+			<div class="col-auto">
+				<div class="row x-gap-15 y-gap-15 items-center">
+					<div class="col-auto md:d-none">
+						<a href="#" class="text-12 text-white">+{{ settings.contact_number }}</a>
+					</div>
+					<div class="col-auto md:d-none">
+						<div class="w-1 h-20 bg-white-20"></div>
+					</div>
+					<div class="col-auto">
+						<a href="#" class="text-12 text-white">{{ settings.email }}</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-auto">
+				<div class="row x-gap-15 items-center jusify-between">
+					<div class="col-auto">
+						<div class="row x-gap-20 items-center xxl:d-none">
+							<div class="col-auto">
+								<button class="d-flex items-center text-14 text-white" data-x-click="currency">
+								    <span class="js-currencyMenu-mainTitle">USD</span>
+								</button>
+							</div>
+							<div class="col-auto">
+								<button class="d-flex items-center text-14 text-white" data-x-click="currency">
+								    <span class="js-currencyMenu-mainTitle">RWF</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<header data-add-bg="bg-dark-1" class="header mt-40 -type-9 js-header" data-x="header" data-x-toggle="is-menu-opened">
+	<div data-anim="fade" class="header__container container">
+		<div class="row justify-between items-center">
+			<div class="col-auto">
+				<div class="d-flex items-center">
+					<a href="{% url 'base:home' %}" class="header-logo mr-20" data-x="header-logo" data-x-toggle="is-logo-dark">
+						<h3 style="color: white;">
                             B&B MOUNTAIN VIEW
                         </h3>
-                    </a>
-                </div>
-            </div>
-            <div class="col-auto">
-                <div class="d-flex items-center">
-                    <div class="header-menu " data-x="mobile-menu" data-x-toggle="is-menu-active">
-                        <div class="mobile-overlay"></div>
-                        <div class="header-menu__content">
-                            <div class="mobile-bg js-mobile-bg"></div>
-                            <div class="menu js-navList">
-                                <ul class="menu__nav text-white -is-active">
+					</a>
+				</div>
+			</div>
+			<div class="col-auto">
+				<div class="d-flex items-center">
+					<div class="header-menu " data-x="mobile-menu" data-x-toggle="is-menu-active">
+						<div class="mobile-overlay"></div>
+						<div class="header-menu__content">
+							<div class="mobile-bg js-mobile-bg"></div>
+							<div class="menu js-navList">
+								<ul class="menu__nav text-white -is-active">
                                     <li>
                                         <a href="{% url 'base:home' %}">Home</a>
                                     </li>
@@ -35,30 +71,24 @@
                                         <a href="{% url 'base:contact' %}">Contact Us</a>
                                     </li>
                                 </ul>
-                            </div>
-
-                            <div class="mobile-footer px-20 py-20 border-top-light js-mobile-footer">
-                            </div>
-                        </div>
-                    </div>
-                    {% comment %} {% if user.is_authenticated %}
-                        <div class="d-flex items-center ml-20 is-menu-opened-hide md:d-none">
-                            <a href="{% url 'auth:logout' %}" class="button px-30 fw-400 text-14 -blue-1 bg-white h-50 text-dark-1">Sign Out</a>
-                        </div>
-                    {% else %}
-                        <div class="d-flex items-center ml-20 is-menu-opened-hide md:d-none">
-                            <a href="{% url 'auth:login' %}" class="button px-30 fw-400 text-14 -blue-1 bg-white h-50 text-dark-1">Sign In</a>
-                            <a href="{% url 'auth:register' %}" class="button px-30 fw-400 text-14 border-white -blue-1 h-50 text-white ml-20">Register</a>
-                        </div>
-                    {% endif %} {% endcomment %}
-                    <div class="d-none xl:d-flex x-gap-20 items-center pl-30 text-white" data-x="header-mobile-icons" data-x-toggle="text-white">
-                        <div><a href="{% url 'auth:login' %}" class="d-flex items-center icon-user text-inherit text-22"></a></div>
-                        <div>
-                            <button class="d-flex items-center icon-menu text-inherit text-20" data-x-click="html, header, header-logo, header-mobile-icons, mobile-menu"></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+							</div>
+							<div class="mobile-footer px-20 py-20 border-top-light js-mobile-footer">
+							</div>
+						</div>
+					</div>
+					<div class="d-flex items-center ml-24 is-menu-opened-hide md:d-none">
+						<a href="#" class="text-26 xl:text-20 text-white icon-search"></a>
+					</div>
+					<div class="d-none xl:d-flex x-gap-20 items-center pl-20 text-white" data-x="header-mobile-icons" data-x-toggle="text-white">
+						<div>
+							<a href="{% url 'base:home' %}" class="d-flex items-center icon-user text-inherit text-22"></a>
+						</div>
+						<div>
+							<button class="d-flex items-center icon-menu text-inherit text-20" data-x-click="html, header, header-logo, header-mobile-icons, mobile-menu"></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </header>
