--- a/templates/rooms/index.html
+++ b/templates/rooms/index.html
@@ -105,7 +105,16 @@
 
                                             <div class="">
                                                 <div class="text-14 text-light-1 mt-50 md:mt-20">{{ room.capacity }} people</div>
-                                                <div class="text-22 lh-12 fw-600 mt-5">${{ room.price|intcomma }}</div>
+
+                                                <!-- Display price based on selected currency -->
+                                                <div class="text-22 lh-12 fw-600 mt-5">
+                                                    {% if selected_currency == 'USD' %}
+                                                        ${{ room.price_usd|intcomma }}
+                                                    {% else %}
+                                                        {{ room.price_rwf|intcomma }} RWF
+                                                    {% endif %}
+                                                </div>
+
                                                 <div class="text-14 text-light-1 mt-5">$10 taxes and charges</div>
 
                                                 <a href="{% url 'base:getRoom' room.slug %}" class="button -md -dark-1 bg-blue-1 text-white mt-24">
