--- a/templates/index.html
+++ b/templates/index.html
@@ -83,8 +83,16 @@
                                 <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
                                     <span>{{ room.name }}</span>
                                 </h4>
-                                <p class="text-light-1 lh-14 text-14 mt-5"></p>
-                                <div class="row y-gap-10 justify-between items-center">
+                                <p class="text-light-1 lh-14 text-14 mt-5">
+                                    <div class="row x-gap-10 y-gap-10 pt-6">
+                                        {% for amenity in room.amenities.all %}
+                                            <div class="col-auto">
+                                                <div class="border-light rounded-100 py-5 px-20 text-10 lh-14">{{ amenity.name }}</div>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </p>
+                                {% comment %} <div class="row y-gap-10 justify-between items-center">
                                     <div class="col-auto">
                                         <div class="text-14 text-dark-1 fw-500">Capacity</div>
                                         <div class="text-14 text-light-1">{{ room.capacity }} People</div>
@@ -93,7 +101,7 @@
                                         <div class="text-14 text-dark-1 fw-500">Size</div>
                                         <div class="text-14 text-light-1">{{ room.size }}</div>
                                     </div>
-                                </div>
+                                </div> {% endcomment %}
                                 <div class="row y-gap-20 justify-between items-center pt-5">
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
@@ -195,8 +203,16 @@
                                 <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
                                     <span>{{ room.name }}</span>
                                 </h4>
-                                <p class="text-light-1 lh-14 text-14 mt-5"></p>
-                                <div class="row y-gap-10 justify-between items-center">
+                                <p class="text-light-1 lh-14 text-14 mt-5">
+                                    <div class="row x-gap-10 y-gap-10 pt-6">
+                                        {% for amenity in room.amenities.all %}
+                                            <div class="col-auto">
+                                                <div class="border-light rounded-100 py-5 px-20 text-10 lh-14">{{ amenity.name }}</div>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </p>
+                                {% comment %} <div class="row y-gap-10 justify-between items-center">
                                     <div class="col-auto">
                                         <div class="text-14 text-dark-1 fw-500">Capacity</div>
                                         <div class="text-14 text-light-1">{{ room.capacity }} People</div>
@@ -205,7 +221,7 @@
                                         <div class="text-14 text-dark-1 fw-500">Size</div>
                                         <div class="text-14 text-light-1">{{ room.size }}</div>
                                     </div>
-                                </div>
+                                </div> {% endcomment %}
                                 <div class="row y-gap-20 justify-between items-center pt-5">
                                     <div class="col-auto">
                                         <div class="d-flex items-center">
