--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -68,6 +68,9 @@
                                         <a href="{% url 'base:rooms' %}">Rooms</a>
                                     </li>
                                     <li>
+                                        <a href="{% url 'base:blogs' %}">Blogs</a>
+                                    </li>
+                                    <li>
                                         <a href="{% url 'base:contact' %}">Contact Us</a>
                                     </li>
                                 </ul>
