--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -51,7 +51,7 @@
                             <h5 class="text-16 fw-500 mb-30">Company</h5>
                                 <div class="d-flex y-gap-5 flex-column">
                                 <a href="{% url 'base:about' %}">About Us</a>
-                                <a href="#">Blog</a>
+                                <a href="{% url 'base:blogs' %}">Blog</a>
                             </div>
                         </div>
 
